--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,12 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - assets/images/
+
+  fonts:
+    - family: ServiceIcons
+      fonts:
+        - asset: assets/fonts/services_fonts.ttf
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
